<?xml version="1.0" encoding="utf-8"?>
<!-- activity_enter_details.xml -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clEnterDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_ad"
    android:padding="10dp"
    tools:context=".EnterDetailsActivity">

    <TextView
        android:id="@+id/tvProfileSetup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/reg_poppins"
        android:layout_marginTop="20dp"
        android:text="@string/profile_set_up_text"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/reg_poppins"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="5dp"
        android:text="@string/select_gender_text"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tvProfileSetup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tvGender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <ImageView
            android:layout_width="148dp"
            android:layout_height="128dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/female_icon"
            android:layout_marginBottom="8dp"
            app:srcCompat="@drawable/female" />

        <RadioButton
            android:id="@+id/rbFemale"
            style="@style/CustomRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/poppins"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/female"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="148dp"
            android:layout_height="128dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/male"
            android:layout_marginBottom="8dp"
            app:srcCompat="@drawable/male" />

        <RadioButton
            android:id="@+id/rbMale"
            style="@style/CustomRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/poppins"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/male"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/reg_poppins"
        android:text="@string/enter_your_weight"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/rgGender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp" />

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="306dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#E6E6E4"
        android:fontFamily="@font/reg_poppins"
        android:gravity="center"
        android:hint="@string/kg_unit"
        android:inputType="numberDecimal"
        android:textColor="@android:color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWeight" />

    <Button
        android:id="@+id/btnProceed"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/next"
        android:textColor="#FFFFFF"
        android:textSize="23sp"
        android:textStyle="bold"
        android:letterSpacing="0.1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
